@startuml

title __KURS's Class Diagram__\n


    namespace om.example.kurs {
      class com.example.kurs.DB {
          - celi : SimpleStringProperty
          - date_end : SimpleStringProperty
          - date_start : SimpleStringProperty
          - id : SimpleIntegerProperty
          - zadachi : SimpleStringProperty
          + DB()
          + getCeli()
          + getDate_end()
          + getDate_start()
          + getId()
          + getZadachi()
          + setCeli()
          + setDate_end()
          + setDate_start()
          + setZadachi()
      }
    }

  


    namespace om.example.kurs {
      class com.example.kurs.HelloApplication {
          {static} + main()
          + start()
      }
    }

  


    namespace om.example.kurs {
      class com.example.kurs.HelloController {
          + fceli : TextField
          + fend : TextField
          + fstart : TextField
          + fzadachi : TextField
          + tbl : TableView
          ~ cceli : TableColumn
          ~ cend : TableColumn
          ~ cid : TableColumn
          ~ cstart : TableColumn
          ~ czadachi : TableColumn
          - conn : Connection
          - fxlist : ObservableList<DB>
          + initialize()
          + onAdd()
          + onDel()
          + onxl()
          - createcolumn()
          - handleButtonAction()
          - pio()
          - updateSorts()
          - updateTable()
      }
    }

  


    namespace om.example.kurs {
      interface com.example.kurs.InterfaceDB {
          {abstract} + addDB()
          {abstract} + deleteDB()
          {abstract} + getAllDB()
          {abstract} + getDBById()
          {abstract} + updateDB()
      }
    }




    namespace om.example.kurs {
      class com.example.kurs.ListDB {
          - conn : Connection
          + ListDB()
          + addDB()
          + deleteDB()
          + getAllDB()
          + getDBById()
          + updateDB()
      }
    }

  

  com.example.kurs.HelloApplication -up-|> javafx.application.Application
  com.example.kurs.HelloController .up.|> javafx.fxml.Initializable
  com.example.kurs.HelloController o-- com.example.kurs.DB : DBAdd
  com.example.kurs.HelloController o-- com.example.kurs.InterfaceDB : interfaceDB
  com.example.kurs.ListDB .up.|> com.example.kurs.InterfaceDB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
